--- a/app/src/main/res/layout/item_deal_layout.xml
+++ b/app/src/main/res/layout/item_deal_layout.xml
@@ -36,6 +36,15 @@
             android:textColor="#ff000000"
             
             android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_item_deal_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="5dp"
+                android:text="500m"/>
+
         </LinearLayout>
 
         <TextView
