--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -1,13 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_business"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tarena.groupon.ui.BusinessActivity">
+    android:orientation="vertical" >
 
-</RelativeLayout>
+    <include
+        android:id="@+id/headerview"
+        layout="@layout/header_business_layout" />
+
+    <include
+        android:id="@+id/tab"
+        layout="@layout/tab_business_layout" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <ListView
+            android:id="@+id/lv_business_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+
+        <ImageView
+            android:id="@+id/iv_business_loading"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@drawable/refreshing_anim"/>
+
+        <include
+            android:id="@+id/district_layout"
+            layout="@layout/district_select_layout"
+            android:visibility="invisible"
+            />
+
+
+    </FrameLayout>
+
+    <include
+        layout="@layout/footer_business_layout"
+        />
+
+</LinearLayout>
